--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ footer {
 
 .reader {
     /*height: 500px;*/
+    font-size: 30px;
     text-align: center;
     vertical-align: middle;
     min-height: 100px;
