--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@ body {
     background-color: rgb(255, 255, 255);
 }
 
+#prev, #next {
+    padding-top: 50%;  
+}
+
 #main {
     height: 100%;
     width: 75%;
