--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
 #prev, #next {
     padding-top: 25%; 
     background-color: red;
-    text-align: left;
+    text-align: center;
 }
 
 .glyphicon {
